[tool.poetry]
name = "EmphasoftAPI"
version = "0.1.0"
description = ""
authors = ["Vladislav Masalov <v.masalov@andersenlab.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.26"
uvicorn = "^0.15.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
